<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.student.EventsActivity">

    <ImageButton
        android:id="@+id/sport_btn"
        android:layout_height="93dp"
        android:layout_width="344dp"
        android:contentDescription="@string/sport"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/music_btn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:id="@+id/music_btn"
        android:layout_height="93dp"
        android:layout_width="344dp"
        android:contentDescription="@string/music"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/art_btn" />

    <ImageButton
        android:id="@+id/art_btn"
        android:layout_height="93dp"
        android:layout_width="344dp"
        android:contentDescription="@string/art"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/science_btn" />

    <ImageButton
        android:id="@+id/science_btn"
        android:layout_height="93dp"
        android:layout_width="344dp"
        android:contentDescription="@string/science"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/meetings_btn" />

    <ImageButton
        android:id="@+id/meetings_btn"
        android:layout_height="93dp"
        android:layout_width="344dp"
        android:contentDescription="@string/meetings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
